--- a/SGE/Views/Alunos/Edit.cshtml
+++ b/SGE/Views/Alunos/Edit.cshtml
@@ -54,9 +54,9 @@
                 <span asp-validation-for="AlunoNome" class="text-danger"></span>
             </div>
             <div class="form-group">
-
-                <input asp-for="Email" class="form-control" type="hidden" />
-
+                <label asp-for="Email" class="control-label"></label>
+                <input asp-for="Email" class="form-control" />
+                <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Celular" class="control-label"></label>
