--- a/SGE/Views/Usuarios/Edit.cshtml
+++ b/SGE/Views/Usuarios/Edit.cshtml
@@ -36,13 +36,13 @@
             </div>
             <div class="form-group">
                 <label asp-for="Senha" class="control-label"></label>
-                <input asp-for="Senha" value="@Model.Senha" class="form-control" />
+                <input asp-for="Senha" type="password" value="@Model.Senha" class="form-control" />
                 <span asp-validation-for="Senha" class="text-danger"></span>
             </div>
 
             <div class="form-group">
                 <label for="ConfirmeSenha" class="control-label">Confirme a Senha</label>
-                <input id="ConfirmeSenha" value="@Model.Senha" name="ConfirmeSenha" class="form-control" />
+                <input id="ConfirmeSenha" type="password" value="@Model.Senha" name="ConfirmeSenha" class="form-control" />
             </div>
             <div class="form-group">
                 <label asp-for="Celular" class="control-label"></label>
