--- a/SGE/Views/Ocorrencias/Details.cshtml
+++ b/SGE/Views/Ocorrencias/Details.cshtml
@@ -14,13 +14,13 @@
             @Html.DisplayNameFor(model => model.TipoOcorrencia)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.TipoOcorrencia.TipoOcorrenciaId)
+            @Html.DisplayFor(model => model.TipoOcorrencia.TipoOcorrenciaNome)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Usuario)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Usuario.UsuarioId)
+            @Html.DisplayFor(model => model.Usuario.UsuarioNome)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.DataOcorrencia)
