--- a/SGE/Views/TiposOcorrencia/Create.cshtml
+++ b/SGE/Views/TiposOcorrencia/Create.cshtml
@@ -22,6 +22,7 @@
         <form asp-action="Create" class="d-flex flex-row row justify-content-between align-items-center" style="width:100%;">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="col-5 my-2">
+                <label asp-for="TipoOcorrenciaNome" class="textoBrancoForm"></label>
                 <input asp-for="TipoOcorrenciaNome" class="headerTabela textoHeaderTabela" placeholder="Tipo de Ocorrência" />
                 <span asp-validation-for="TipoOcorrenciaNome" class="text-danger"></span>
             </div>
@@ -38,10 +39,6 @@
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="ListaOcorrencias" asp-controller="Ocorrencias">Back to List</a>
 </div>
 
 @section Scripts {
