--- a/SGE/Views/Ocorrencias/ListaOcorrencias.cshtml
+++ b/SGE/Views/Ocorrencias/ListaOcorrencias.cshtml
@@ -18,7 +18,7 @@
 <div>
     <div class="d-flex row justify-content-between my-5">
         <div style="width: 15%;">
-            <img src="https://placehold.co/200x150" />
+            <img src="/img/imgIndexOcorrencias.png" style="max-width:200px;" />
         </div>
         <div style="width: 85%;" class="ps-5">
             <div class="d-flex row align-items-center justify-content-between">
