--- a/SGE/Views/Usuarios/Create.cshtml
+++ b/SGE/Views/Usuarios/Create.cshtml
@@ -18,7 +18,7 @@
 </div>
 
 <div>
-    <form asp-action="Create" class="d-flex row justify-content-between align-items-center" style="width:100%;">
+    <form asp-action="Create" class="d-flex row justify-content-between align-items-end" style="width:100%;">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <div class="col-4 my-2">
             <label asp-for="UsuarioNome" class="textoBrancoForm"></label>
