--- a/SGE/Views/Alunos/Create.cshtml
+++ b/SGE/Views/Alunos/Create.cshtml
@@ -1,133 +1,144 @@
 ﻿@model SGE.Models.Aluno
 
 @{
-    ViewData["Title"] = "Create";
+	ViewData["Title"] = "Create";
 
-    Guid TipoUser = (Guid)@ViewData["TipoUsuarioId"];
+	Guid TipoUser = (Guid)@ViewData["TipoUsuarioId"];
 }
 
 <div style=" margin-bottom: 2em;">
-    <div class="d-flex justify-content-between" style="width:100%;">
-        <h1 style="width:93%; font-size:3.2rem; color:#F6D524;"> Cadastrar Aluno</h1>
-        <a asp-action="Index" style="width:7%; display:flex; flex-direction:row; align-items:center; text-decoration:none; color:#F6D524;">
-            <svg width="auto" height="22" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path fill-rule="evenodd" clip-rule="evenodd" d="M23.4377 28.125C23.1891 28.125 22.9506 28.0262 22.7748 27.8504C22.599 27.6746 22.5002 27.4361 22.5002 27.1875V2.8125C22.5002 2.56386 22.599 2.3254 22.7748 2.14959C22.9506 1.97377 23.1891 1.875 23.4377 1.875C23.6863 1.875 23.9248 1.97377 24.1006 2.14959C24.2764 2.3254 24.3752 2.56386 24.3752 2.8125V27.1875C24.3752 27.4361 24.2764 27.6746 24.1006 27.8504C23.9248 28.0262 23.6863 28.125 23.4377 28.125ZM18.7502 15C18.7502 15.2486 18.6514 15.4871 18.4756 15.6629C18.2998 15.8387 18.0613 15.9375 17.8127 15.9375H6.95084L10.9765 19.9613C11.0636 20.0484 11.1328 20.1519 11.1799 20.2658C11.2271 20.3797 11.2514 20.5017 11.2514 20.625C11.2514 20.7483 11.2271 20.8703 11.1799 20.9842C11.1328 21.0981 11.0636 21.2016 10.9765 21.2887C10.8893 21.3759 10.7858 21.4451 10.6719 21.4922C10.558 21.5394 10.436 21.5637 10.3127 21.5637C10.1894 21.5637 10.0674 21.5394 9.95349 21.4922C9.8396 21.4451 9.73613 21.3759 9.64896 21.2887L4.02396 15.6637C3.93665 15.5767 3.86739 15.4732 3.82013 15.3593C3.77286 15.2454 3.74854 15.1233 3.74854 15C3.74854 14.8767 3.77286 14.7546 3.82013 14.6407C3.86739 14.5268 3.93665 14.4233 4.02396 14.3363L9.64896 8.71125C9.825 8.53521 10.0638 8.43632 10.3127 8.43632C10.5617 8.43632 10.8004 8.53521 10.9765 8.71125C11.1525 8.88729 11.2514 9.12605 11.2514 9.375C11.2514 9.62395 11.1525 9.86271 10.9765 10.0387L6.95084 14.0625H17.8127C18.0613 14.0625 18.2998 14.1613 18.4756 14.3371C18.6514 14.5129 18.7502 14.7514 18.7502 15Z" fill="#F6D524" />
-            </svg>
-            Voltar
-        </a>
-    </div>
-    <div style="width: 100%; height:5px; background:#f6d524;"> </div>
+	<div class="d-flex justify-content-between" style="width:100%;">
+		<h1 style="width:93%; font-size:3.2rem; color:#F6D524;"> Cadastrar Aluno</h1>
+		<a asp-action="Index" style="width:7%; display:flex; flex-direction:row; align-items:center; text-decoration:none; color:#F6D524;">
+			<svg width="auto" height="22" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+				<path fill-rule="evenodd" clip-rule="evenodd" d="M23.4377 28.125C23.1891 28.125 22.9506 28.0262 22.7748 27.8504C22.599 27.6746 22.5002 27.4361 22.5002 27.1875V2.8125C22.5002 2.56386 22.599 2.3254 22.7748 2.14959C22.9506 1.97377 23.1891 1.875 23.4377 1.875C23.6863 1.875 23.9248 1.97377 24.1006 2.14959C24.2764 2.3254 24.3752 2.56386 24.3752 2.8125V27.1875C24.3752 27.4361 24.2764 27.6746 24.1006 27.8504C23.9248 28.0262 23.6863 28.125 23.4377 28.125ZM18.7502 15C18.7502 15.2486 18.6514 15.4871 18.4756 15.6629C18.2998 15.8387 18.0613 15.9375 17.8127 15.9375H6.95084L10.9765 19.9613C11.0636 20.0484 11.1328 20.1519 11.1799 20.2658C11.2271 20.3797 11.2514 20.5017 11.2514 20.625C11.2514 20.7483 11.2271 20.8703 11.1799 20.9842C11.1328 21.0981 11.0636 21.2016 10.9765 21.2887C10.8893 21.3759 10.7858 21.4451 10.6719 21.4922C10.558 21.5394 10.436 21.5637 10.3127 21.5637C10.1894 21.5637 10.0674 21.5394 9.95349 21.4922C9.8396 21.4451 9.73613 21.3759 9.64896 21.2887L4.02396 15.6637C3.93665 15.5767 3.86739 15.4732 3.82013 15.3593C3.77286 15.2454 3.74854 15.1233 3.74854 15C3.74854 14.8767 3.77286 14.7546 3.82013 14.6407C3.86739 14.5268 3.93665 14.4233 4.02396 14.3363L9.64896 8.71125C9.825 8.53521 10.0638 8.43632 10.3127 8.43632C10.5617 8.43632 10.8004 8.53521 10.9765 8.71125C11.1525 8.88729 11.2514 9.12605 11.2514 9.375C11.2514 9.62395 11.1525 9.86271 10.9765 10.0387L6.95084 14.0625H17.8127C18.0613 14.0625 18.2998 14.1613 18.4756 14.3371C18.6514 14.5129 18.7502 14.7514 18.7502 15Z" fill="#F6D524" />
+			</svg>
+			Voltar
+		</a>
+	</div>
+	<div style="width: 100%; height:5px; background:#f6d524;"> </div>
 </div>
 
 @if (ViewData["Erro"] != null)
 {
-    <div class="row">
-        <div class="col-md-4 text-center">
-            <div class="alert alert-danger">
-                <strong> @ViewData["Erro"] </strong>
+	<div class="row">
+		<div class="col-md-4 text-center">
+			<div class="alert alert-danger">
+				<strong> @ViewData["Erro"] </strong>
 
-            </div>
-        </div>
-    </div>
+			</div>
+		</div>
+	</div>
 }
 
 <div class="">
-    <form asp-action="Create" method="post" enctype="multipart/form-data" class="d-flex flex-row">
-        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+	<form asp-action="Create" method="post" enctype="multipart/form-data" class="d-flex flex-row">
+		<div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
-        <div class="justify-content-between align-items-center" style="width:25%;">
-            <div class="col-9 my-2">
-                <label asp-for="UrlFoto" class="textoBrancoForm"></label>
-                <input asp-for="UrlFoto" type="file" class="headerTabela textoHeaderTabela" name="UrlFoto" />
-                <span asp-validation-for="UrlFoto" class="text-danger"></span>
-            </div>
-        </div>
+		<div class="justify-content-between align-items-center" style="width:25%;">
+			<div class="col-9 my-2">
+				<label asp-for="UrlFoto" class="textoBrancoForm"></label>
+				<input asp-for="UrlFoto" type="file" class="headerTabela textoHeaderTabela" name="UrlFoto" />
+				<span asp-validation-for="UrlFoto" class="text-danger"></span>
+			</div>
+		</div>
 
-        <div class="d-flex flex-row row justify-content-between align-items-center" style="width:75%;">
-            <div class="col-3 my-2">
-                <input asp-for="Matricula" class="headerTabela textoHeaderTabela" placeholder="Matrícula" />
-                <span asp-validation-for="Matricula" class="text-danger"></span>
-            </div>
+		<div class="d-flex flex-row row justify-content-between align-items-center" style="width:75%;">
+			<div class="col-3 my-2">
+				<label asp-for="Matricula" class="textoBrancoForm"></label>
+				<input asp-for="Matricula" class="headerTabela textoHeaderTabela" placeholder="Matrícula" />
+				<span asp-validation-for="Matricula" class="text-danger"></span>
+			</div>
 
-            <div class="col-5 my-2">
-                <input asp-for="AlunoNome" class="headerTabela textoHeaderTabela" placeholder="Nome do Aluno" />
-                <span asp-validation-for="AlunoNome" class="text-danger"></span>
-            </div>
+			<div class="col-5 my-2">
+				<label asp-for="AlunoNome" class="textoBrancoForm"></label>
+				<input asp-for="AlunoNome" class="headerTabela textoHeaderTabela" placeholder="Nome do Aluno" />
+				<span asp-validation-for="AlunoNome" class="text-danger"></span>
+			</div>
 
-            <div class="col-4 my-2">
-                <input asp-for="DataNascimento" type="date" class="headerTabela textoHeaderTabela textoBrancoForm" />
-                <span asp-validation-for="DataNascimento" class="text-danger"></span>
-            </div>
+			<div class="col-4 my-2">
+				<label asp-for="DataNascimento" class="textoBrancoForm"></label>
+				<input asp-for="DataNascimento" type="date" class="headerTabela textoHeaderTabela textoBrancoForm" />
+				<span asp-validation-for="DataNascimento" class="text-danger"></span>
+			</div>
 
-            <div class="col-4 my-2">
-                <input asp-for="Email" class="headerTabela textoHeaderTabela" placeholder="Email do Aluno" />
-                <span asp-validation-for="Email" class="text-danger"></span>
-            </div>
+			<div class="col-4 my-2">
+				<label asp-for="Email" class="textoBrancoForm"></label>
+				<input asp-for="Email" class="headerTabela textoHeaderTabela" placeholder="Email do Aluno" />
+				<span asp-validation-for="Email" class="text-danger"></span>
+			</div>
 
-            <div class="col-3 my-2">
-                <input asp-for="Celular" class="headerTabela textoHeaderTabela" placeholder="Celular do Aluno" />
-                <span asp-validation-for="Celular" class="text-danger"></span>
-            </div>
+			<div class="col-3 my-2">
+				<label asp-for="Celular" class="textoBrancoForm"></label>
+				<input asp-for="Celular" class="headerTabela textoHeaderTabela" placeholder="Celular do Aluno" />
+				<span asp-validation-for="Celular" class="text-danger"></span>
+			</div>
 
-            <div class="col-4 my-2">
-                <input asp-for="Logradouro" class="headerTabela textoHeaderTabela" placeholder="Logradouro" />
-                <span asp-validation-for="Logradouro" class="text-danger"></span>
-            </div>
+			<div class="col-4 my-2">
+				<label asp-for="Logradouro" class="textoBrancoForm"></label>
+				<input asp-for="Logradouro" class="headerTabela textoHeaderTabela" placeholder="Logradouro" />
+				<span asp-validation-for="Logradouro" class="text-danger"></span>
+			</div>
 
-            <div class="col-2 my-2">
-                <input asp-for="Numero" class="headerTabela textoHeaderTabela" placeholder="Número" />
-                <span asp-validation-for="Numero" class="text-danger"></span>
-            </div>
+			<div class="col-2 my-2">
+				<label asp-for="Numero" class="textoBrancoForm"></label>
+				<input asp-for="Numero" class="headerTabela textoHeaderTabela" placeholder="Número" />
+				<span asp-validation-for="Numero" class="text-danger"></span>
+			</div>
 
-            <div class="col-3 my-2">
-                <input asp-for="Cidade" class="headerTabela textoHeaderTabela" placeholder="Cidade" />
-                <span asp-validation-for="Cidade" class="text-danger"></span>
-            </div>
+			<div class="col-3 my-2">
+				<label asp-for="Cidade" class="textoBrancoForm"></label>
+				<input asp-for="Cidade" class="headerTabela textoHeaderTabela" placeholder="Cidade" />
+				<span asp-validation-for="Cidade" class="text-danger"></span>
+			</div>
 
-            <div class="col-3 my-2">
-                <input asp-for="Estado" class="headerTabela textoHeaderTabela" placeholder="Estado" />
-                <span asp-validation-for="Estado" class="text-danger"></span>
-            </div>
+			<div class="col-3 my-2">
+				<label asp-for="Estado" class="textoBrancoForm"></label>
+				<input asp-for="Estado" class="headerTabela textoHeaderTabela" placeholder="Estado" />
+				<span asp-validation-for="Estado" class="text-danger"></span>
+			</div>
 
-            <div class="col-3 my-2">
-                <input asp-for="CEP" class="headerTabela textoHeaderTabela" placeholder="CPF" />
-                <span asp-validation-for="CEP" class="text-danger"></span>
-            </div>
+			<div class="col-3 my-2">
+				<label asp-for="CEP" class="textoBrancoForm"></label>
+				<input asp-for="CEP" class="headerTabela textoHeaderTabela" placeholder="CPF" />
+				<span asp-validation-for="CEP" class="text-danger"></span>
+			</div>
 
-            <div class="col-4 my-2">
-                <input asp-for="Senha" type="password" class="headerTabela textoHeaderTabela" />
-                <span asp-validation-for="Senha" class="text-danger"></span>
-            </div>
+			<div class="col-4 my-2">
+				<label asp-for="Senha" class="textoBrancoForm"></label>
+				<input asp-for="Senha" type="password" class="headerTabela textoHeaderTabela" />
+				<span asp-validation-for="Senha" class="text-danger"></span>
+			</div>
 
-            <div class="col-4 my-2">
-                <input id="ConfirmeSenha" type="password" name="ConfirmeSenha" class="headerTabela textoHeaderTabela" />
-            </div>
+			<div class="col-4 my-2">
+				<label class="textoBrancoForm">Confirme sua Senha</label>
+				<input id="ConfirmeSenha" type="password" name="ConfirmeSenha" class="headerTabela textoHeaderTabela" />
+			</div>
 
-            <div class="col-3 my-2">
-                <input type="submit" value="Cadastrar" class="btn botaoBranco2" style="width:100%;" />
-            </div>
-            <div>
-                <input class="form-check-input" type="hidden" asp-for="CadAtivo" value="true" />
-            </div>
+			<div class="col-3 my-2">
+				<input type="submit" value="Cadastrar" class="btn botaoBranco2" style="width:100%;" />
+			</div>
+			<div>
+				<input class="form-check-input" type="hidden" asp-for="CadAtivo" value="true" />
+			</div>
+			<div>
+				<input asp-for="DataCadastro" class="form-control" type="hidden"
+					   value="@DateTime.Now.ToString("yyyy-MM-dd HH:mm:ss")" />
+			</div>
 
-            <div>
-                <input asp-for="DataCadastro" class="form-control" type="hidden"
-                       value="@DateTime.Now.ToString("yyyy-MM-dd HH:mm:ss")" />
-            </div>
+			<div>
+				<input asp-for="CadInativo" class="form-control" type="hidden" />
+			</div>
 
-            <div>
-                <input asp-for="CadInativo" class="form-control" type="hidden" />
-            </div>
-
-            <div>
-                <input asp-for="TipoUsuarioId" type="hidden" value="@TipoUser" />
-            </div>
-        </div>
-    </form>
+			<div>
+				<input asp-for="TipoUsuarioId" type="hidden" value="@TipoUser" />
+			</div>
+		</div>
+	</form>
 </div>
 
 @section Scripts {
-    @{
-        await Html.RenderPartialAsync("_ValidationScriptsPartial");
-    }
+	@{
+		await Html.RenderPartialAsync("_ValidationScriptsPartial");
+	}
 }
