--- a/SGE/Views/ReservasSala/Reservas.cshtml
+++ b/SGE/Views/ReservasSala/Reservas.cshtml
@@ -9,21 +9,9 @@
 }
 
 <div>
-    <div class="d-flex row justify-content-between my-5">
-        <div style="width: 15%;">
-            <img src="/img/imgIndexSalas.png" style="max-width:200px;" />
-        </div>
-        <div style="width: 85%;" class="ps-5">
-            <div class="d-flex row align-items-center justify-content-between">
-                <h1 style="width:18%; font-size:3.2rem; color:#F6D524;">Salas</h1>
-                <div style="height:5px; width:82%; background:#F6D524;" />
-            </div>
-            <p style="font-size:1.5rem; color:#fff;">Administre as reservas de salas.</p>
-        </div>
-    </div>
 	<div class="d-flex row justify-content-between my-5">
 		<div style="width: 15%;">
-			<img style="max-width:200px" />
+			<img src="/img/imgIndexSalas.png" style="max-width:200px;" />
 		</div>
 		<div style="width: 85%;" class="ps-5">
 			<div class="d-flex row align-items-center justify-content-between">
@@ -33,7 +21,6 @@
 			<p style="font-size:1.5rem; color:#fff;">Administre as reservas de salas.</p>
 		</div>
 	</div>
-
 	<div class="justify-content-between my-5" style="width:100%;">
 		<div class="d-flex row align-items-center" style="width:100%;">
 			<div style="width:40%;" class="d-flex justify-content-between align-items-center">
@@ -52,7 +39,7 @@
 			</div>
 		</div>
 		<div style="width:100%;">
-			<table style="height:230px" class="table-borderless tabela1">
+			<table style="height:230px; color:white;" class="table-borderless tabela1">
 				<thead>
 					<tr style="padding:0.3em">
 						<th style="padding:0.2em">
@@ -66,7 +53,7 @@
 						</th>
 					</tr>
 				</thead>
-				<tbody class="table-bordered">
+				<tbody class="table-bordered" style="color:white; font-weight:600;">
 					@foreach (var item in Model)
 					{
 						<tr style="padding:0.1em">
@@ -80,9 +67,9 @@
 								@Html.DisplayFor(modelItem => item.CadInativo)
 							</td>
 							<td style="padding:0.2em">
-								<a style="padding:0.2em" class="text-dark" asp-controller="Salas" asp-action="Edit" asp-route-id="@item.SalaId"><svg bootstrap-icon="PencilSquare" width="26" height="26" aria-label=""></svg></a>
-								<a style="padding:0.2em" class="text-dark" asp-controller="Salas" asp-action="Details" asp-route-id="@item.SalaId"><svg bootstrap-icon="Info" width="26" height="26" aria-label=""></svg></a>
-								<a style="padding:0.2em" class="text-dark" asp-controller="Salas" asp-action="Delete" asp-route-id="@item.SalaId"><svg bootstrap-icon="Trash" width="26" height="26" aria-label=""></svg></a>
+								<a style="padding:0.2em" class="text-light" asp-controller="Salas" asp-action="Edit" asp-route-id="@item.SalaId"><svg bootstrap-icon="PencilSquare" width="26" height="26" aria-label=""></svg></a>
+								<a style="padding:0.2em" class="text-light" asp-controller="Salas" asp-action="Details" asp-route-id="@item.SalaId"><svg bootstrap-icon="Info" width="26" height="26" aria-label=""></svg></a>
+								<a style="padding:0.2em" class="text-light" asp-controller="Salas" asp-action="Delete" asp-route-id="@item.SalaId"><svg bootstrap-icon="Trash" width="26" height="26" aria-label=""></svg></a>
 							</td>
 						</tr>
 					}
@@ -127,7 +114,7 @@
 
 	<div class="row">
 		<div class="col-12 h-25 overflow-auto">
-			<table class="table-borderless tabela1">
+			<table class="table-borderless tabela1" style="color:white;">
 				<thead>
 					<tr style="padding:0.3em">
 						<th style="padding:0.3em">
@@ -138,7 +125,7 @@
 						</th>
 					</tr>
 				</thead>
-				<tbody class="table-bordered">
+				<tbody class="table-bordered" style="color:white; font-weight:600;">
 					@foreach (var item in ListaSalas)
 					{
 						<tr style="padding:0.3em">
