--- a/SGE/Views/Usuarios/Index.cshtml
+++ b/SGE/Views/Usuarios/Index.cshtml
@@ -26,10 +26,10 @@
 					<svg bootstrap-icon="PlusSquare" width="40" height="40" aria-label="Pesquisar" style="color:white"></svg>
 				</button>
 			</div>
-			<table class="tabela1 table-borderless">
+			<table class="tabela1 table-borderless" style="margin-top:4em; color: white; font-weight:600">
 				<thead>
 					<tr>
-						<th style="padding:0.7em;">
+						<th style="padding:0.4em; font-weight:780">
 							@Html.DisplayNameFor(model => model.TipoUsuario.Tipo)
 						</th>
 						<th></th>
@@ -39,13 +39,13 @@
 					@foreach (var item in Model)
 					{
 						<tr>
-							<td style="padding:0.7em;">
+							<td style="padding:0.4em;">
 								@Html.DisplayFor(modelItem => item.TipoUsuario.Tipo)
 							</td>
 							<td>
-								<a class="text-dark" asp-action="Edit" asp-controller="TiposUsuario" asp-route-id="@item.TipoUsuarioId"><svg bootstrap-icon="PencilSquare" width="19" height="19" aria-label=""></svg></a>
-								<a class="text-dark" asp-action="Details" asp-controller="TiposUsuario" asp-route-id="@item.TipoUsuarioId"><svg bootstrap-icon="Info" width="19" height="19" aria-label=""></svg></a>
-								<a class="text-dark" asp-action="Delete" asp-controller="TiposUsuario" asp-route-id="@item.TipoUsuarioId"><svg bootstrap-icon="Trash" width="19" height="19" aria-label=""></svg></a>
+								<a class="text-light" asp-action="Edit" asp-controller="TiposUsuario" asp-route-id="@item.TipoUsuarioId"><svg bootstrap-icon="PencilSquare" width="22" height="22" aria-label=""></svg></a>
+								<a class="text-light" asp-action="Details" asp-controller="TiposUsuario" asp-route-id="@item.TipoUsuarioId"><svg bootstrap-icon="Info" width="22" height="22" aria-label=""></svg></a>
+								<a class="text-light" asp-action="Delete" asp-controller="TiposUsuario" asp-route-id="@item.TipoUsuarioId"><svg bootstrap-icon="Trash" width="22" height="22" aria-label=""></svg></a>
 							</td>
 						</tr>
 					}
@@ -64,79 +64,79 @@
 			</div>
 			<div>
 				<div>
-					<input style="width:40em; height: 2.5em; background:none; border: 1px solid white; border-radius:15px; padding:0px 10px; color:white;" type="search" placeholder="Pesquisar usuário" />
+					<input style="width:44em; height: 2.5em; background:none; border: 1px solid white; border-radius:15px; color:white; margin-left:2.2em" type="search" placeholder="Pesquisar usuário" />
 				</div>
 				<div>
-					<table class="tabela2Cabeca table-borderless">
+					<table class="tabela2Cabeca table-borderless" style="color:white">
 						<thead>
-							<tr style="padding:0.7em;">
-								<th style="padding:0.7em;">
+							<tr style="padding:0.4em;">
+								<th style="padding:0.4em;">
 									@Html.DisplayNameFor(model => model.UsuarioNome)
 								</th>
-								<th style="padding:0.7em;">
+								<th style="padding:0.4em;">
 									@Html.DisplayNameFor(model => model.Email)
 								</th>
 								@* 			<th style="padding:0.5em">
 								@Html.DisplayNameFor(model => model.Senha)
 								</th> *@
-								<th style="padding:0.7em;">
+								<th style="padding:0.4em;">
 									@Html.DisplayNameFor(model => model.Celular)
 								</th>
 								@* 			<th style="padding:0.5em">
 								@Html.DisplayNameFor(model => model.CadAtivo)
 								</th> *@
-								<th style="padding:0.7em;">
+								<th style="padding:0.4em;">
 									@Html.DisplayNameFor(model => model.DataCadastro)
 								</th>
 								@* 			<th style="padding:0.5em">
 								@Html.DisplayNameFor(model => model.CadInativo)
 								</th> *@
-								<th style="padding:0.7em;">
+								<th style="padding:0.4em;">
 									@Html.DisplayNameFor(model => model.TipoUsuario)
 								</th>
 							</tr>
 						</thead>
-						<tbody class="tabela2 table-bordered">
+						<tbody class="tabela2 table-bordered" style="color:white; font-weight:600">
 							@foreach (var item in Model)
 							{
-								<tr style="padding:0.7em;">
-									<td style="padding:0.7em;">
+								<tr style="padding:0.4em;">
+									<td style="padding:0.4em;">
 										@Html.DisplayFor(modelItem => item.UsuarioNome)
 									</td>
-									<td style="padding:0.7em;">
+									<td style="padding:0.4em;">
 										@Html.DisplayFor(modelItem => item.Email)
 									</td>
 									@* 				<td>
 								@Html.DisplayFor(modelItem => item.Senha)
 								</td> *@
-									<td style="padding:0.7em;">
+									<td style="padding:0.4em;">
 										@Html.DisplayFor(modelItem => item.Celular)
 									</td>
 									@* 				<td>
 								@Html.DisplayFor(modelItem => item.CadAtivo)
 								</td> *@
-									<td style="padding:0.7em;">
+									<td style="padding:0.4em;">
 										@Html.DisplayFor(modelItem => item.DataCadastro)
 									</td>
 									@* 				<td>
 								@Html.DisplayFor(modelItem => item.CadInativo)
 								</td> *@
-									<td style="padding:0.7em;">
+									<td style="padding:0.4em;">
 										@Html.DisplayFor(modelItem => item.TipoUsuario.Tipo)
 									</td>
 
-									<td style="padding:0.4em;">
-										<div style="padding:0.2em;">
-											<a class="text-dark" asp-action="Edit" asp-route-id="@item.TipoUsuarioId"><svg bootstrap-icon="PencilSquare" width="19" height="19" aria-label=""></svg></a>
+									<td style="padding:0.4em; display:flex; gap:1em">
+										<div>
+											<a class="text-light" asp-action="Edit" asp-route-id="@item.TipoUsuarioId"><svg bootstrap-icon="PencilSquare" width="22" height="22" aria-label=""></svg></a>
 
 										</div>
 
-										<div style="padding:0.2em;">
-											<a class="text-dark" asp-action="Details" asp-route-id="@item.UsuarioId"><svg bootstrap-icon="Info" width="19" height="19" aria-label=""></svg></a>
+										<div>
+											<a class="text-light" asp-action="Details" asp-route-id="@item.UsuarioId"><svg bootstrap-icon="Info" width="22" height="22" aria-label=""></svg></a>
 										</div>
 
-										<div style="padding:0.2em;">
-											<a class="text-dark" asp-action="Delete" asp-route-id="@item.UsuarioId"><svg bootstrap-icon="Trash" width="19" height="19" aria-label=""></svg></a>
+										<div>
+											<a class="text-light" asp-action="Delete" asp-route-id="@item.UsuarioId"><svg bootstrap-icon="Trash" width="22" height="22" aria-label=""></svg></a>
 										</div>
 									</td>
 								</tr>
