--- a/SGE/wwwroot/css/site.css
+++ b/SGE/wwwroot/css/site.css
@@ -23,6 +23,10 @@ body {
     font-family: "Montserrat", sans-serif;
 }
 
+.container {
+    margin-bottom: 5em;
+}
+
 .cardLogin {
     margin-top: 3em;
     display: flex;
@@ -82,14 +86,19 @@ body {
 #rodape {
     /*background-color: #F6D524;*/
     /*background-color: white;*/
-    background-color: rgba(255, 255, 255, 0.3);
+    position: absolute;
+    bottom: 0;
     width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 4em;
-    margin-top: 2em;
 }
+
+    #rodape div {
+        background-color: rgba(255, 255, 255, 0.3);
+        border-top: 1px solid #A2A2A2;
+        height: 3em;
+        display:flex;
+        justify-content:center;
+        align-items:center;
+    }
 
 .navBar {
     margin: 0em 3.7em;
@@ -153,27 +162,26 @@ body {
     margin: 2em 0em;
 }
 
-.tableAlunosTop ::placeholder{
-    color:white;
-}
+    .tableAlunosTop ::placeholder {
+        color: white;
+    }
 
-.tableAlunosTop h3{
-    font-size:35px;
-    font-weight: 400;
-}
+    .tableAlunosTop h3 {
+        font-size: 35px;
+        font-weight: 400;
+    }
 
     .tableAlunosTop a {
         margin-left: 12em;
     }
 
-.tableAlunosTop input{
-    width:100%;
+    .tableAlunosTop input {
+        width: 100%;
+    }
 
-}
-
-.tableAlunosTop input::placeholder{
-    color:white;
-}
+        .tableAlunosTop input::placeholder {
+            color: white;
+        }
 
 .tabelaAluno {
     background: rgba(255, 255, 255, 0.3);
@@ -217,10 +225,10 @@ body {
     align-items: center;
 }
 
-.botaoBranco2:hover {
-    background: #fff;
-    color: black;
-}
+    .botaoBranco2:hover {
+        background: #fff;
+        color: black;
+    }
 
 .blocoTransparente {
     background: rgba(255, 255, 255, 03);
