--- a/SGE/Views/Ocorrencias/ListaOcorrencias.cshtml
+++ b/SGE/Views/Ocorrencias/ListaOcorrencias.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewData["Title"] = "ListaOcorrencias";
-    List<Alunos> listaAlunos = (List<Alunos>)ViewData["listaAlunos"];
+    List<Aluno> listaAlunos = (List<Aluno>)ViewData["listaAlunos"];
 
     if (listaAlunos.Count() == 0)
     {
