--- a/SGE/Views/Shared/_Layout.cshtml
+++ b/SGE/Views/Shared/_Layout.cshtml
@@ -111,8 +111,7 @@
     </div>
     @if (Context.Session.GetString("usuario") != null)
     {
-
-                    <footer id="rodape" class="text-muted text-black">
+                    <footer id="rodape" style="border-top:1px solid #A2A2A2;" class="text-muted text-black">
                         <div class="d-flex justify-content-center align-content-center">
             &copy; 2024 - SGE 
         </div>
