--- a/SGE/Views/Turmas/Index.cshtml
+++ b/SGE/Views/Turmas/Index.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewData["Title"] = "Index";
-    List<Alunos> Alunos = (List<Alunos>)ViewData["Alunos"];
+    List<Aluno> Alunos = (List<Aluno>)ViewData["Alunos"];
 }
 
 <div>
